# Sreenivas_Reddy

./: README.md  final documentation.docx
DDO'S/: journal.doc
Generative AI projects/: Copy of TelegramBOT weather.ipynb  Fine-Tuning Whisper Model_LoRA.ipynb  FineTuningExample distilbert.ipynb  Untitled3.ipynb
pubmed_paper_fetcher_ci_ready/: .gitignore  LICENSE  README.md  cli.py  pubmed_client.py  pyproject.toml  python-app.yml
yolo real world projects/: Telegram integration YoloV9.ipynb
